--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@tauri-apps/plugin-opener": "^2",
     "lucide-react": "^0.469.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "swiper": "^11.1.15"
   },
   "devDependencies": {
     "@tauri-apps/cli": "^2",
